Corrected the text colour for palms Set soles to appear regardless of chinks setting Removed palms and soles from armour gaps table.

--- a/gurps4e.css
+++ b/gurps4e.css
@@ -1071,6 +1071,7 @@
 	grid-column: 2 / 5;
 	grid-row: 23 / 24;
 	background-color: #60497A;
+	color: aliceblue;
 }
 
 .location-palm-right {
@@ -1078,6 +1079,7 @@
 	grid-row: 23 / 24;
 	z-index: 1;
 	background-color: #60497A;
+	color: aliceblue;
 }
 
 .location-lower-shoulder-left {
